@@ -1,3 +1,9 @@
+2011-05-13  Kai Tietz  <ktietz@redhat.com>
+
+	* gimplify.c (gimplify_expr): Make sure operand is boolified.
+	* tree-cfg.c (verify_gimple_assign_unary): Check for boolean
+	compatible type for TRUTH_NOT_EXPR.
+
 2011-05-13  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/i386/i386.c (ix86_save_reg): Change return type to
